[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imgserve"
version = "0.1.0"
description = "Serve a simple image gallery from the current directory"
readme = "README.md"
authors = [{ name = "Daniel" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = [
  "Flask>=3.0.0",
  "waitress>=3.0.0",
]

[project.scripts]
imgserve = "imgserve.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
